--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "drift/redis-bundle",
+  "name": "drift/mysql-bundle",
   "type": "library",
   "license": "MIT",
 
   "require": {
     "php": "^7.1.3",
-    "clue/redis-react": "^2.3",
+    "react/mysql": "^0.5.4",
     "drift/http-kernel": "^0.1",
     "mmoreram/base-bundle": "^2.0",
     "mmoreram/symfony-bundle-dependencies": "^2.2"
@@ -13,7 +13,7 @@
 
   "autoload": {
     "psr-4": {
-      "Drift\\Redis\\": "."
+      "Drift\\Mysql\\": "."
     }
   }
 }
