--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "php": "^7.1.3",
     "clue/redis-react": "^2.3",
     "drift/http-kernel": "^0.1",
-    "mmoreram/base-bundle": "^2.0",
+    "mmoreram/base-bundle": "dev-master@dev",
     "mmoreram/symfony-bundle-dependencies": "^2.2"
   },
 
