--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
   ],
 
   "require": {
-    "php": "^7.3",
+    "php": "^7.4 | ^8.0",
     "symfony/dependency-injection": "^5.0",
     "clue/redis-react": "^2.3",
-    "drift/http-kernel": "0.1.*",
+    "drift/http-kernel": "^0.1",
     "mmoreram/base-bundle": "^2.1"
   },
 
   "require-dev": {
-    "phpunit/phpunit": "7.5.17"
+    "phpunit/phpunit": "^9"
   },
 
   "autoload": {
